some changes in backend

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DB_CONNECT=mongodb+srv://devesh:<password>@cluster0.clpvp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECT="mongodb+srv://devesh:devesh124@cluster0.clpvp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 TOKEN_SECRET=jahdahdjahuad
