--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+NODE_ENV="production"
 DB_CONNECT="mongodb+srv://devesh:devesh124@cluster0.clpvp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 TOKEN_SECRET=jahdahdjahuad
