--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV="production"
+PORT = 5000
 DB_CONNECT="mongodb+srv://devesh:devesh124@cluster0.clpvp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 TOKEN_SECRET=jahdahdjahuad
