--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm run build",
-		"install-client": "cd client && npm install",
-		"start": "node server.js",
+    "install-client": "cd client && npm install",
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "16.14.0"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,7 +25,7 @@
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8",
+    "mongoose": "^6.2.5",
     "path": "^0.12.7"
   },
   "devDependencies": {
